@@ -62,7 +62,7 @@ void Timer::draw()
   print() << finalcut::FPoint{1, 1}
           << "---------------\n"
           << "Press Q to quit\n"
-          << "---------------\n";
+          << "---------------";
   setAreaCursor ({1, 4}, true, getVirtualDesktop());
 }
 
@@ -75,13 +75,18 @@ void Timer::onTimer (finalcut::FTimerEvent* ev)
   if ( getPrintPos().getY() == int(getDesktopHeight()) )
     is_last_line = true;
 
-  print() << finalcut::FColorPair {finalcut::FColor(1 + timer_id)}
-          << "Timer event, id " << timer_id << '\n';
-
   if ( is_last_line )
+  {
     scrollAreaForward (getVirtualDesktop());
+    print() << '\r';
+  }
+  else
+    print() << '\n';
 
-  setAreaCursor ({1, getPrintPos().getY()}, true, getVirtualDesktop());
+  print() << finalcut::FColorPair {finalcut::FColor(1 + timer_id)}
+          << "Timer event, id " << timer_id;
+  setAreaCursor (getPrintPos(), true, getVirtualDesktop());
+  forceTerminalUpdate();
 }
 
 //----------------------------------------------------------------------
